--- a/lib/style.css
+++ b/lib/style.css
@@ -2,6 +2,7 @@
 html, body {
   max-width: 100%;
   max-height: 100%;
+ 
   overflow-x: hidden;
   
 }
@@ -10,6 +11,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover; */
   /* background: linear-gradient(30deg, #444540 30%, #fff8dc 30%); */
+  min-width: 550px;
   margin: 0;
   color: #454541;
   display: flex;
@@ -26,9 +28,15 @@ body {
   height: 50vh;
 }
 #bg_gal {
-  bottom: 0;
+  top: 30vh;
   right: 0;
   height: 70vh;
+}
+
+header {
+  position: absolute;
+  display: grid;
+  z-index: 999;
 }
 
 #logo {
@@ -63,14 +71,28 @@ body {
   height: 100%;
   background-color: #454541;
 }
+#break_edge_bottom {
+  width: .5em;
+  height: 100%;
+  background-color: #fff8dc;
+}
 
 #bottom {
   position: absolute;
   height: 70vh;
   width: 100%;
+  min-width: 1050px;
   background-color: #454541;
   top: 50vh;
   left: 0;
   transform: skew(-30deg);
   transform-origin: top;
+  display: flex;
+  justify-content: flex-end;
+}
+
+@media screen and (max-width: 800px) {
+  #bottom {
+    min-width: none;
+  }
 }
