--- a/lib/style.css
+++ b/lib/style.css
@@ -51,6 +51,18 @@ header {
 #left_flower {
   grid-area: 3 / 1 / 4 / 1;
   z-index: -1;
+  animation: fadeInAnimation ease 2s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeInAnimation {
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+  }
 }
 
 section {
@@ -72,7 +84,8 @@ footer {
   background-color: #454541;
   color: #fff8dc;
   grid-area: 4 / 1 / 5 / 3;
-  justify-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 footer a {
